--- a/OpenCV - Vision Pro/Form1.resx
+++ b/OpenCV - Vision Pro/Form1.resx
@@ -121,7 +121,7 @@
   <data name="m_BtnAddTool.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAApZJREFUOE/Vk19IU1EYwPcUOOkPEVIhPURJ9RpBgWNvPUUaKfakvlVggVEhVIsw
+        DAAACwwBP0AiyAAAApZJREFUOE/Vk19IU1EYwPcUOOkPEVIhPURJ9RpBgWNvPUUaKfakvlVggVEhVIsw
         mGUa+iAsxLx3aSg9WJSsNp3uj0XamP9W7trdvc5hiLSJxcbu9Xyd73LcnW367g8+OJxzvt/hnO87hp3N
         2jxflBY5sypyNarIV6dluwliPQfYsiHhPHgm4Tw0uOo8XMKm8gMxm1GR+BYacSXCE1XiAYONVxSx2xqb
         sBnJl/17qPBDwnnkKEvNJSnwx6gotCHZKpQI941E7cULZysKVkyXa1i6TtxUWQv9TXtRlhS6wN1aD+6G
@@ -138,7 +138,7 @@
   <data name="m_RunBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAntJREFUOE/VlMtvElEUh0dbjTtXRlyoS2t3vuJK2RiXTQxpU1dujC6MUeMf0NRE
+        DAAACwwBP0AiyAAAAntJREFUOE/VlMtvElEUh0dbjTtXRlyoS2t3vuJK2RiXTQxpU1dujC6MUeMf0NRE
         JSgDDCKJbVHbagkqpUKwBugsGpqKFJ0BCszQRxo3RkVRBmbGx/FevDAgpft+yW8znPMB59w71OYFUqnt
         UmbhqCxw11DsKIyaT14pLXKHAaAD15TYXbpiWHddmtlzpNrUDllIdMsiP48kvxSRh8agZz9R5uQs3wUs
         1VkM6VLfwrsvkVaNj/peHej1nbLI9SCZhJpwc5OsMaiuUMnxp0h7K59PGE5LweAxLMMNs5Nj4HAOQibs
@@ -155,7 +155,7 @@
   <data name="m_OpenBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAArFJREFUOE/Vk19IU1Ecx/cUqPSHCKmQHqKkeo2owCG9CEGkkWK9qE+FEZE9Scle
+        DAAACwwBP0AiyAAAArFJREFUOE/Vk19IU1Ecx/cUqPSHCKmQHqKkeo2owCG9CEGkkWK9qE+FEZE9Scle
         JCpKRdHlP9R7ppZ/ShMz1nRrZE5z2rIUdXbvrm7Ug7mZ/Rm7d/fX+d1Ou45N3/3CF8695/w+55zf73d0
         W1trCyQ5xHPpMs/lyzzJC4kmPfja9rBpXcCy90TAsm9g1bI/lf2KL/DVJUoeUkbtlwSiyB4CaDZelviW
         ez5nXaIyunsHBb4MWA4cZKGx+uMmhyho5j9kI0sCN6EsmVIWT2UnLOsv5rNwTX59TgF03t+JsN/uJqhu
@@ -173,7 +173,7 @@
   <data name="m_RunBtnContinuous.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAotJREFUOE/Vk89PE0EUx3syAaIxxhA1xINRomfj0fAPGOFijB7Ag9z1bkDlYEwk
+        DAAACwwBP0AiyAAAAotJREFUOE/Vk89PE0EUx3syAaIxxhA1xINRomfj0fAPGOFijB7Ag9z1bkDlYEwk
         hHgwGkRBJZEfCqW7W6wNq/UHAsVqW0qh1HZ3Z7f7q91aDUYjz5l16HaleOebfLOT3fc+O/PeG8/2VkqZ
         qpc1tkky2DbRYFpRnjuJkHcv/eyxAvtOWIH9bDFwoJG+qi6cVIsMthu7gL0umxwQ07UhGdwNErM+s2cX
         BjJW4OAhmrpZguo/jExuUdQYG/KvkcEB+YZ3HRYNtuFp9+Wa/qvtbTTdLXtnGEYSvaM9UCykIYdiLkvZ
@@ -194,8 +194,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA2
-        CwAAAk1TRnQBSQFMAgEBAwEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAu
+        CwAAAk1TRnQBSQFMAgEBAwEAAVgBAAFYAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -224,25 +224,25 @@
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
         AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/xcAAf8B8QO1AQcIAAH/
-        AfQB8wK8AfEB9AH/FQAC/wr0Av8FAAH/AfUB8wEHAe4BGQEJAe8B9AH/BAAB/wH0AQcBrgRmAa4B7wHz
-        Af8TAAH/Ae8BEgkTAe8B/wQAAf8BGwGaAe8BrgHdARkBCQG0AbUB/wMAAf8B8wGuCGYBrgHxAf8SAAH0
-        ARQKAAETAfQDAAH/ARoCmgH3Ac8CGQEJArQB/wMAAfUB7ApmAa4B8xIAAfQBFAIAAREB8AH/Ae0BAAIO
-        AQABEwH0AgAB/wEbA5oB9wHPAbUBGQEJArQBGgH/AgAB7gFmAYwIrgFnAWYB7wH/EQAB9AEUAQABDgEU
-        AfIB/wHyAW0BBwHvAQABEwH0AgAB/wEaAZkDkwGuAhkBCQK0AZoB9AEAAf8BrgFmAYwCiwGGA4sBhgGL
-        AmYBrgH0EQAB9AEUAQAB7wEHAfMC/wHzAf8B9AEAARMB9AIAAfMDkwKUAY0BtQEZAQkCtAGaARsB/wH0
-        AmYBjAaLAYYBiwNmAfERAAH0ARQBAAHzA/8BAAH/AbwBEgEAARMB9AIAAbwFlAGOAhkBCQK0AZoBGwH/
-        AfMCZgGMAosCrgKLAYYBiwNmAbwRAAH0ARQCAAEQAQcD/wHvARABAAETAfQCAAG8BJMBHAH4AfABGQEJ
-        AewB7QGaARsB/wHzAmYBjAGLA64CiwGGAYsDZgG8EQAB9AEUAgAB9wH/AfMBBwL/Ae8BAAETAfQCAAH0
-        BZoBHAEHARkBCQGSAZoBkwHuAf8B9QJmAWcBrgGNAWcBjASLA2YB8xEAAfQBFAIAAe8B8wH4ARUB9AEA
-        Af8BAAETAfQCAAH/ARoEmgEcAhkBCQHsAe0BrgG1AfQB/wGuAWYBZwGuAYwBZgFnAa4BZgKuAmYBrgH0
-        EQAB9AEUAgABDwEQAgABkgH0AbwBAAETAfQCAAH/AfMEmgEcAbUB8QEJAa4BtAHPAbUB9AEAAfABZgFn
-        BGYBjQGMAY0BrgJmAQcB/xEAAfQBEwoAARIB9AIAAvQBGgOZAe0CGQEJAZIBGgG8AbUB9AEAAf8B9wVm
-        Aq4DZgGuAfQSAAH/AfcBEwkUAe8B/wIAAe4FkwGNAQkBGQEJAQcC/wH0Af8BAAH/AfQB9whmAewB8wH/
-        EgAC/wr0Av8CAAHzApMDlAGOAQkBGQEJAQcGAAL/AfABrgRmAa4B7gH1Af8kAAH/AfMB7wONA7UBBwkA
-        Af8B9QLzAfQB/xUAAUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAL/AfwBDwHw
-        AQ8CAAGAAQEB8AEDAcABAwIAAYABAQHgAQMBgAEBAgABgAEBAcABAwGAAQECAAGAAQEBgAEBAYADAAGA
-        AQEBgAEBBAABgAEBAYAFAAGAAYEBgAUAAYABAQGABQABgAEBAYAFAAGAASEBgAUAAYABAQGAAQABgAMA
-        AYABAQGAAQABgAEBAgABgAEBAYABAAGAAQECAAGAAQEBgAEPAcABAwIAAv8BwAEPAfgBHwIACw==
+        AfQB8wK8AfEB9AH/FQAC/wr0Av8FAAL/AfMBBwG8ARkBCQHvAfQB/wQAAf8B9AEHAa4EZgGuAe8B8wH/
+        EwAB/wHvARIJEwHvAf8EAAH/ARsBmgHvAa4B3QEZAQkBtAG1Af8DAAH/AfMBrghmAa4B8QH/EgAB9AEU
+        CgABEwH0AwAB/wEaApoB9wHPAhkBCQK0Af8DAAH/AewKZgGuAfMSAAH0ARQCAAERAfAB/wHtAQACDgEA
+        ARMB9AIAAf8BGwOaAfcBzwG1ARkBCQK0ARoB/wIAAbwBZgGMCK4BZwFmAe8B/xEAAfQBFAEAAQ4BFAHy
+        Af8B8gFtAQcB7wEAARMB9AIAAf8BGgGZA5MBrgIZAQkCtAGaAfQBAAH/Aa4BZgGMAosBhgOLAYYBiwJm
+        Aa4B9BEAAfQBFAEAAe8BBwHzAv8B8wH/AfQBAAETAfQCAAHzA5MClAGNAbUBGQEJArQBmgEbAf8B9AJm
+        AYwGiwGGAYsDZgHxEQAB9AEUAQAB8wP/AQAB/wG8ARIBAAETAfQCAAG8BZQBjgIZAQkCtAGaARsB/wHz
+        AmYBjAKLAq4CiwGGAYsDZgG8EQAB9AEUAgABEAEHA/8B7wEQAQABEwH0AgABvASTARwB7AHwARkBCQHs
+        Ae0BmgEbAf8B8wJmAYwBiwOuAosBhgGLA2YBvBEAAfQBFAIAAfcB/wHzAQcC/wHvAQABEwH0AgAB9AWa
+        ARwBBwEZAQkBkgGaAZMBvAL/AmYBZwGuAY0BZwGMBIsDZgHzEQAB9AEUAgAB7wHzAewBFQH0AQAB/wEA
+        ARMB9AIAAf8BGgSaARwCGQEJAewB7QGuAbUB9AH/Aa4BZgFnAa4BjAFmAWcBrgFmAq4CZgGuAfQRAAH0
+        ARQCAAEPARACAAGSAfQBvAEAARMB9AIAAf8B8wSaARwBtQHxAQkBrgG0Ac8BtQH0AQAB8AFmAWcEZgGN
+        AYwBjQGuAmYBBwH/EQAB9AETCgABEgH0AgAC9AEaA5kB7QIZAQkBkgEaAbwBtQH0AQAB/wH3BWYCrgNm
+        Aa4B9BIAAf8B9wETCRQB7wH/AgABvAWTAY0BCQEZAQkBBwL/AfQB/wEAAf8B9AH3CGYB7AHzAf8SAAL/
+        CvQC/wIAAfMCkwOUAY4BCQEZAQkBBwYAAv8B8AGuBGYBrgG8Av8kAAH/AfMB7wONA7UBBwkAAv8C8wH0
+        Af8VAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAC/wH8AQ8B8AEPAgABgAEB
+        AfABAwHAAQMCAAGAAQEB4AEDAYABAQIAAYABAQHAAQMBgAEBAgABgAEBAYABAQGAAwABgAEBAYABAQQA
+        AYABAQGABQABgAGBAYAFAAGAAQEBgAUAAYABAQGABQABgAEhAYAFAAGAAQEBgAEAAYADAAGAAQEBgAEA
+        AYABAQIAAYABAQGAAQABgAEBAgABgAEBAYABDwHAAQMCAAL/AcABDwH4AR8CAAs=
 </value>
   </data>
   <metadata name="m_AddToolList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -251,7 +251,7 @@
   <data name="blobToolMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAS1JREFUOE/V1L1LQlEcxvGbiUIvZNgqLjWFTU4FOjWERZshQWtT0N8QNLQIzc2t
+        DAAACwwBP0AiyAAAAS1JREFUOE/V1L1LQlEcxvGbiUIvZNgqLjWFTU4FOjWERZshQWtT0N8QNLQIzc2t
         FYmg4D/Qv9BqLxASLTn19n3gHjh4rvRz9IEPopz7cN6u0VRlFZe4R8voFidYQhCVfeJ3Aj94QQVBNLOk
         hyx2EURL8AcN0cdH/P0bbaxjGWdwY/cQxC/Uw9co4QgDvGEbLnmYC79wjtnYBbqYg0sd5kJ5hPYmDZ1i
         AS4HeMVEhTpB7V8ZM3A5hJbvj/23UNdgHotIwc8mmniCufAY+2hgAUoWK3CzrcJc+I5nXCEHRUu/wRZ0
@@ -262,7 +262,7 @@
   <data name="caliperToolMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAudJREFUOE+N1etPUmEcB/CTrTet2nxRq/4WN2trahO1lVrTKeZtiNelXBThCAeE
+        DAAACwwBP0AiyAAAAudJREFUOE+N1etPUmEcB/CTrTet2nxRq/4WN2trahO1lVrTKeZtiNelXBThCAeE
         cyjQCs285LxV5Kx0KCqOBYc1Gs3mpeZ60XQTExOYZtYm/ToHD6IcNL/b9xXn+ex5zvMDkP2Jj+efSU+q
         TldkNYy/LMUDg+UE0K3JkIKhfSJY/ZMJkOjHICWhBmOWsZMcVxJbeUvyqJ+v8SypWiHQ3HWgLYUqIOc8
         8GlpC5yL29A3vQFpiUI1s5wdLkfAWyeesqBQDRT4/I0LPnz1HQ+8c12g1OTIrXSbi+WzPSIM9lfIlcKs
@@ -280,7 +280,7 @@
   <data name="histogramToolMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAo1JREFUOE+tk21P01AUx0t8eqPfYgbaik8T+jDiwDFB1PmUihhwGgwwjIy1qwSj
+        DAAACwwBP0AiyAAAAo1JREFUOE+tk21P01AUx0t8eqPfYgbaik8T+jDiwDFB1PmUihhwGgwwjIy1qwSj
         GxtbmWwT2AZsIYEXGp0j4YsRY3wDiS84ntt1ZaVDZ+I/+SfNvef8eu6951B/UIvYqp7j2hUnx8g+YoGW
         r7iZybPGfvPi29SrPCtv86zyEw0WM8oPnpG/ikz4shF+vByO12d4NpTFpF820FFjDMcoHxgmetpIt4rA
         MGCnYTL6YV8SAv6CfQ+rdbujJw3MoXhaztiC65zVylBIleFW51vbXicbihuYqvQ7wyPcc87Ci66ILYE4
@@ -292,6 +292,63 @@
         aBPr1bXRVdCGl0Hz4/pEEeL989B9MUxaZo9nQg4DVxUZdPInjpn+J2POAZ4wamAO5XSOncI/fak7QjM+
         wCnblKRK9e6OinQ6x8oxrHavQbLFGLeP1xQ5Flava+1qK5lNMk4NYLvoLWzi80Z48yIVd9BvWNKwurHP
         zNZoKIr6DUQhRrv50BwCAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="m_GetInputImageMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>260, 17</value>
+  </metadata>
+  <data name="openImageFileToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAudJREFUOE/Vk11IU2EYx3cVqBQRIRXSRZTUdQTdhBeFEER5U3aldeWtF90FeiGy
+        DEyXH+QyNzXnx9Rt6jlnc82vwi3bdDqdTKau7XxsO2dfhCiBPr3v2btN07r3Dw+8nPP8f+///VKcbvkF
+        SyEfpUtYia4MSVQFF2fucdzYRfJbkbReupO0XqZT1ivF5NPJQqZ8n1/faLO2JVxLuoMvk21gppph0vz+
+        gI8xEisxStxz4LhwDgGppPXqNWI9rmDEfJ2LMV4Lo4YtLgQjAzoQEjGI7e7A0Ow0DFk0wIo0oNSukEQX
+        NQ7ezXujv19J7EeFZ8UwlAKMwy3AxyWYMBmAJ0BqwQ7KHw7oH+8A3MOK1Jpb6CmoNZScJ4ij4iS6ETfK
+        QH2LnIyLiTIMl5BKgG3RCYYZGzgcGogm5yCSmKkj9qPyCyOFCJj4G5iBHa5AmAe7XYP6zMBJTADAmU8w
+        OeHTREC86VngT2Rc8a7K5dvehOivFAjJODhRyjQQ9UrMPi9N3CKYnNDJvYgkptNNBBgQOFhZ88C6fwNM
+        wwOg03SAvr8bRnXdMJ8BogqL5jKCyYmXzBU7eyyEE1NZYCgaltNN2SZBO6iDZtcKNC2tgkqng1nbpyyQ
+        E5knBJNThNOWCqIp24SB2zwrL89CGeGdaRyaFj0yUDlnB2O/Kg1DS46mrMcv9m/nc3rH+yoLZMbVKJ0H
+        ttggfJ2bgU6TEVTLXlC5vfDWYEIJtRngJr5uBJPTnru8OMp1t2eAvs0RdKmboLezHupfV0FXax180HyE
+        9l4tDH9G6VmyGomuIYjjwjPhF5CBBvgxUPdVgUr9TB4ve/rAtdiDUtFpmDjh3vVV//vZYYVCdBEyrGJD
+        c+tLqO96CHZn+mUcLvSiFlL+hht7zvJHxHqyaoeenllf7zzLiXSdpqc68O17+34Wgg4A7xlaRU0wOJ9H
+        LP9Xw+iDEqWh9DYeC4KlgBPNNzmRKgvHmcdslCo+8QBOkRSKP5+dtplRC6RbAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="openVideoFileToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAsJJREFUOE/NlPtPkmEUx/mtrbb+PfOO1kgFZ2U2q636XTRdXtJNaKLjDqZCKCZy
+        ERVvqKOLliAQF/GSwy25yLfnPAsw29rKX3y3s+flPd/zec/z8H6P4OpfXY2Km+0SeUu7WP7iMiEVyx62
+        NQ/dEEgb5OUiox9V7/dRPZ1AqfsE1dY9VM4coMyVhHAyjgr7ESpmjyCciqPcecxzpCmdS/Iaqq3TfUG7
+        WFYmkErkwrv6r7gnX0PzgAclnlM86p6DZMTHQN/xpMMG0agf9NLWTjuE1jgkwz6uoZdTTROrFRl3QCwO
+        rDeH0aD6BLHy439Fg/oz6sZ3i0D3xh4WfPswr8bR2zGFkfkolAtRvipmAnwdXYphbDkOx0YCek8M80yv
+        eDXNVwN7rrAHi0B6uJzIQbeTwus+O6zhNEInZzAGUuh5qsKQYh7jWydYP8jBHMrAu5/DhyNANeiEPZqF
+        ltUNO0JFoHMzwYrTPEFAUzCN7eMs9P4U1C+ViKxqoe/WQmfdxmL8jMMoZP0O3sQfQM1ijD/MA/P3Bn8a
+        mk4lUiEDToMGeE0qKHsnseJPwsu6Pa/9DUhnZGTd5LdMAh37bWHbywN/BAxYM6mh7p+CZyeJsd3034Hr
+        B1k4opmCiGDWcAZaBgwusi33GmCbC8B3mOM50pwHalwXgPmzIBGdoTmY4X9C3zMN3upWsBnP8HOzRbIs
+        0phgmjxwgnXrWI0WgcOub7xlih6pBVpXGDPLEYy6w7C4Q3AxMcX0UqSgy2tH2DrLcs6VSBF4x3T5D1s0
+        du7DJus1vfHiwcASt15Lj7tgvccds8x6AW6/1k4H9zDlSEPWoxqqLViPTYpb9Zot1FiiqH0XQaXtELXm
+        b6iZjHHT32bdk38p6L6KDQPKkYaGBNVQLXUqlchKBM9F/dfbJIP3L46jfw02vpq6Gruu/ZqKV/YSCH4C
+        ZpSs29TMLw0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="openCameraToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAtRJREFUOE/Vk3tIU1Ecx/dXoNKDCKmQ/oiykvrHCAwc04L+KjVUVhQq9Ef0zijS
+        mI+S8tWWbmtzzjnvXW5N10jnI10ZQVGJ1bK0mrWHOaKSnK5weOf9dc7ttGWb0b9+4QuHc+7vc8/5PXgL
+        W773dOyMgxIEHFRuwEHnzLh1fPA0ryDHPK915TavdVXXpHV1PNmKLPCoohkXLUaeYJw0G3DRgE3W44yj
+        qdwzoIpmnyxfgoCdXuuatSQ0XNMj9DoEGv4Nmc+Mk3rGftTFjSZlRY3zM3NJeEgT/Ow8aKlY+jfs+1sN
+        2PvEYL8vhukR7d/QIdZWHTMhSF9GMCH5tu+NZRyUBH84NayGWtExMEnPgEV7Gfof3YGnD7vBrCqCry+U
+        nKfeNEDArYdZt7GMIOYKFwDnbHJIDeYmCdztvAl9XUZo0cqht00PVosBHj/oAJW0grNFd427MYpxgac9
+        mmBCwtVET2A/P1eAqaYQOupKOOtrL4JOIQNaXgOtshJoEZ8D3ZXT0KO5BD50SwSc9TupTQQTUsBJ5+Hn
+        YmBv8R7oK0gFS34KqK/K4MKpAqgqrQK5qBDunU/lzrpLMzkgjoFROoNgQgq46RzW9w6+vNQGgQ2Hd4Ks
+        SgEJG7ZA4uZEaNYYofW4IAyIcp9OMCExdsmugPsGuqEyCNQfTYEmpQ52JPFhf1oWqCUK6D6bMgeIenOW
+        HTOEN/bMwL4u5tVJ7snGogNgEgk5SwtOgKFRD7SyEa7nH+T2zEVC6Kk+RIDUBzwIBBOS3yaMZ0akisnB
+        SjDUlUO7oZ5zG7KJkoNZpwjuYd/SVPzqSwdVTBDhwuOEJwDn5X/MOLU2GDwy/9hh/bDXx6GKv44E+NPo
+        x/3+IdF6/4BwNwmNLEjIXsTerlyMAsoYF+XCfRaEoDXOGerZYnbUGEVC/q1vyVkCb3L2Vrz+ZKNjwNm8
+        EVUyg3Xr0tgxKj5iARaQeLyfzPSLXzjdYLEAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
