--- a/OpenCV - Vision Pro/Properties/Resources.resx
+++ b/OpenCV - Vision Pro/Properties/Resources.resx
@@ -193,4 +193,16 @@
   <data name="opencv" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\opencv.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ocr" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ocr.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="polarUnwrap" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\polarUnwrap.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="transform" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\transform.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="process" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\process.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
