--- a/OpenCV_Vision_Pro/Properties/Resources.resx
+++ b/OpenCV_Vision_Pro/Properties/Resources.resx
@@ -223,4 +223,16 @@
   <data name="stitch" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\stitch.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="blend" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\blend.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="retina" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\retina.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="retinex" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\retinex.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bioinspired" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bioinspired.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
